# libadrenotools

./: .gitmodules  CMakeLists.txt  README.md  adrenotools.pc.in  build_asm.sh
android-build/: build.gradle  settings.gradle
android-build/adrenotools/: build.gradle
include/adrenotools/: bcenabler.h  driver.h  priv.h
src/: bcenabler.cpp  driver.cpp
src/hook/: CMakeLists.txt  file_redirect_hook.cpp  gsl_alloc_hook.c  hook_impl.cpp  hook_impl.h  hook_impl_params.h  main_hook.cpp  main_hook.h
tools/: ADPKG.md  README.md  blob-patcher.py
tools/acc-shim/: README.md  vk_acc_shim.cpp
tools/qtimapper-shim/: Android.bp  README.md  shim.cpp
tools/qtimapper-shim/ext/: QtiGrallocDefs.h  common.h  gr_adreno_info.cpp  gr_adreno_info.h  gr_priv_handle.h  gr_utils.cpp  gr_utils.h  gralloc_priv.h  mapper.h  mapperextensions.h
tools/qtimapper-shim/ext/types/: common.h  mapper.h  mapperextensions.h
tools/qtimapper-shim/ext_headers/: common.h  gr_priv_handle.h  mapper.h  mapperextensions.h
tools/qtimapper-shim/ext_headers/types/: common.h  mapper.h  mapperextensions.h
